syntax = "proto3";

package proto;

option go_package = "/proto";

// BlockRequest - khớp với Go (không dùng nhưng cần để field numbers đúng)
message BlockRequest {
    uint64 block_number = 1;
}

// StatusRequest - khớp với Go (không dùng nhưng cần để field numbers đúng)
message StatusRequest {
    // Empty message
}

// Request để lấy danh sách active validators cho epoch transition
message GetActiveValidatorsRequest {
    // Không cần tham số, lấy từ state hiện tại
}

// Request để lấy validators tại một block cụ thể
// Dùng cho khởi động (block 0) và epoch transition (last_global_exec_index)
message GetValidatorsAtBlockRequest {
    uint64 block_number = 1;  // Block number (0 cho genesis, last_global_exec_index cho epoch transition)
}

// Request để lấy last block number từ Go Master
// Dùng để khởi tạo next_expected_index trong Rust executor_client
message GetLastBlockNumberRequest {
    // Không cần tham số, lấy từ DB
}

// Sui-style epoch transition messages
message GetCurrentEpochRequest {
    // Empty request - get current epoch from Go state
}

message GetCurrentEpochResponse {
    uint64 epoch = 1;  // Current epoch from Go state
}

message GetEpochStartTimestampRequest {
    // Empty request - get timestamp of current epoch
}

message GetEpochStartTimestampResponse {
    uint64 timestamp_ms = 1;  // Epoch start timestamp in milliseconds
}

message AdvanceEpochRequest {
    uint64 new_epoch = 1;  // New epoch number to advance to
    uint64 epoch_start_timestamp_ms = 2;  // Epoch start timestamp in milliseconds
}

message AdvanceEpochResponse {
    uint64 new_epoch = 1;  // Confirmed new epoch number
    uint64 epoch_start_timestamp_ms = 2;  // Confirmed epoch start timestamp
}

// NEW: Unified epoch boundary data request
// Returns validators at epoch boundary (last block of previous epoch) for consistent committee
message GetEpochBoundaryDataRequest {
    uint64 epoch = 1;  // Target epoch to get boundary data for
}

// NEW: Unified epoch boundary data response
// Contains all data needed for fork-safe epoch transition
message EpochBoundaryData {
    uint64 epoch = 1;                      // Target epoch
    uint64 epoch_start_timestamp_ms = 2;   // Fixed timestamp for genesis hash consistency
    uint64 boundary_block = 3;             // Last block of previous epoch (validator snapshot point)
    repeated ValidatorInfo validators = 4; // Validators at boundary_block
}

// ============================================================================
// CLEAN TRANSITION HANDOFF APIs
// These APIs ensure no gaps or overlaps between sync and consensus modes
// ============================================================================

// SetConsensusStartBlock - Called before starting consensus
// Tells Go: "Consensus will produce blocks starting from block_number"
message SetConsensusStartBlockRequest {
    uint64 block_number = 1;  // First block that consensus will produce
}

message SetConsensusStartBlockResponse {
    bool success = 1;
    uint64 last_sync_block = 2;  // Last block that was synced (should be block_number - 1)
    string message = 3;
}

// SetSyncStartBlock - Called when consensus ends
// Tells Go: "Consensus ended at last_consensus_block, sync should start from last_consensus_block + 1"
message SetSyncStartBlockRequest {
    uint64 last_consensus_block = 1;  // Last block produced by consensus
}

message SetSyncStartBlockResponse {
    bool success = 1;
    uint64 sync_start_block = 2;  // Block number where sync will start (last_consensus_block + 1)
    string message = 3;
}

// WaitForSyncToBlock - Wait for Go sync to reach a specific block
// Used during SyncOnly -> Validator transition to ensure sync is complete before consensus starts
message WaitForSyncToBlockRequest {
    uint64 target_block = 1;       // Target block number to wait for
    uint64 timeout_seconds = 2;    // Maximum time to wait (0 = use default)
}

message WaitForSyncToBlockResponse {
    bool reached = 1;              // True if target block was reached
    uint64 current_block = 2;      // Current block number
    string message = 3;
}

// Validator info từ Go state - các trường cần thiết cho committee.json + metadata + phí/phần thưởng
message ValidatorInfo {
    // Các trường cần thiết cho committee.json (tên khớp với committee.json)
    string address = 1;        // P2P address (Multiaddr format) - khớp với "address" trong committee.json
    string stake = 2;          // Stake amount (string) - khớp với "stake" trong committee.json (sau khi normalize)
    string authority_key = 3;   // BLS public key (base64) - khớp với "authority_key" trong committee.json
    string protocol_key = 4;   // Ed25519 protocol key (base64) - khớp với "protocol_key" trong committee.json
    string network_key = 5;    // Ed25519 network key (base64) - khớp với "network_key" trong committee.json
    
    // Metadata
    string name = 6;                // Tên validator
    string description = 7;         // Mô tả validator
    string website = 8;            // Website của validator
    string image = 9;              // URL ảnh đại diện
    
    // Các trường liên quan đến tính phí và trả phần thưởng
    uint64 commission_rate = 10;   // Tỷ lệ hoa hồng (ví dụ: 1000 = 10%, tối đa 10000)
    string min_self_delegation = 11; // Lượng stake tối thiểu validator phải tự ủy quyền
    string accumulated_rewards_per_share = 12; // Tổng phần thưởng tích lũy trên mỗi đơn vị stake
}

// Danh sách validators (tương thích với Go ValidatorInfoList)
message ValidatorInfoList {
    repeated ValidatorInfo validators = 1;
    // Epoch metadata để thống nhất với Rust
    uint64 epoch_timestamp_ms = 2;        // Epoch start timestamp in milliseconds
    uint64 last_global_exec_index = 3;    // Last global execution index from previous epoch
}

// Response cho GetLastBlockNumberRequest
message LastBlockNumberResponse {
    uint64 last_block_number = 1;  // Last block number from Go Master DB
}

// Request message
// CRITICAL: Field numbers MUST match Go validator.proto for compatibility
// Go validator.proto field numbers:
//   - BlockRequest block_request = 1
//   - StatusRequest status_request = 2
//   - GetActiveValidatorsRequest get_active_validators_request = 3
//   - GetValidatorsAtBlockRequest get_validators_at_block_request = 4
//   - GetLastBlockNumberRequest get_last_block_number_request = 5
message Request {
    oneof payload {
        BlockRequest block_request = 1;  // Match Go
        StatusRequest status_request = 2;  // Match Go
        GetActiveValidatorsRequest get_active_validators_request = 3;  // Match Go
        GetValidatorsAtBlockRequest get_validators_at_block_request = 4;  // Match Go (was 2, fixed to 4)
        GetLastBlockNumberRequest get_last_block_number_request = 5;  // New: Get last block number
        GetCurrentEpochRequest get_current_epoch_request = 6;  // Sui-style: Get current epoch
        GetEpochStartTimestampRequest get_epoch_start_timestamp_request = 7;  // Sui-style: Get epoch timestamp
        AdvanceEpochRequest advance_epoch_request = 8;  // Sui-style: Advance epoch
        GetEpochBoundaryDataRequest get_epoch_boundary_data_request = 9;  // NEW: Unified epoch boundary data
        SetConsensusStartBlockRequest set_consensus_start_block_request = 10;  // NEW: Transition handoff
        SetSyncStartBlockRequest set_sync_start_block_request = 11;  // NEW: Transition handoff
        WaitForSyncToBlockRequest wait_for_sync_to_block_request = 12;  // NEW: Transition handoff
    }
}

// Response message
// NOTE: Field numbers phải khớp với Go validator.proto để đảm bảo compatibility
message Response {
    oneof payload {
        ValidatorList validator_list = 1;  // Khớp với Go (không dùng nhưng cần để field numbers đúng)
        ValidatorInfoList validator_info_list = 2; // Cho epoch transition - khớp với Go
        ServerStatus server_status = 3;  // Khớp với Go (không dùng nhưng cần để field numbers đúng)
        string error = 4; // Error message nếu có lỗi - khớp với Go
        LastBlockNumberResponse last_block_number_response = 5;  // New: Last block number response
        GetCurrentEpochResponse get_current_epoch_response = 6;  // Sui-style: Current epoch response
        GetEpochStartTimestampResponse get_epoch_start_timestamp_response = 7;  // Sui-style: Epoch timestamp response
        AdvanceEpochResponse advance_epoch_response = 8;  // Sui-style: Advance epoch response
        EpochBoundaryData epoch_boundary_data = 9;  // NEW: Unified epoch boundary data response
        SetConsensusStartBlockResponse set_consensus_start_block_response = 10;  // NEW: Transition handoff
        SetSyncStartBlockResponse set_sync_start_block_response = 11;  // NEW: Transition handoff
        WaitForSyncToBlockResponse wait_for_sync_to_block_response = 12;  // NEW: Transition handoff
    }
}

// ValidatorList - khớp với Go (không dùng nhưng cần để field numbers đúng)
message ValidatorList {
    repeated ValidatorInfo validators = 1;
}

// ServerStatus - khớp với Go (không dùng nhưng cần để field numbers đúng)
message ServerStatus {
    string status_message = 1;
    uint64 uptime_seconds = 2;
}

